<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainTitle"
        android:id="@+id/mainTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:id="@+id/instructions"
        android:layout_below="@+id/mainTitle"
        android:layout_centerHorizontal="true"
        android:textSize="26sp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/timeHour"
        android:layout_below="@+id/instructions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:hint="@string/hourTime"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/timeMinutes"
        android:layout_below="@+id/timeHour"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:hint="@string/minuteTime"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultsButton"
        android:id="@+id/resultsButton"
        android:layout_below="@+id/timeMinutes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:textSize="35sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/marathonImage"
        android:layout_below="@+id/resultsButton"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/marathonImage"
        android:src="@drawable/marathon"
        android:layout_marginTop="5dp"/>



</RelativeLayout>
